完成首页的头像和背景墙

--- a/code/static/html/myself.html
+++ b/code/static/html/myself.html
@@ -1,1 +1,1 @@
-<md-content class="md-padding">自己</md-content>
+<link rel="stylesheet" type="text/css" href="../css/myself.css"/><md-content ng-controller="myselfController as mc"><div class="userBackground" layout="row"><div class="avatarContainer"><img class="avatar" ng-src="{{mc.userInfomation.avatarUrl}}"/></div><div flex="flex"></div></div></md-content>
