完成自己页面对四个子页面的引用

--- a/code/static/html/pictures.html
+++ b/code/static/html/pictures.html
@@ -1,1 +1,1 @@
-<md-content class="md-padding">这是全放照片的那个页面</md-content>
+<link rel="stylesheet" href="../css/pictures.css"/><md-content class="md-padding greyBackground" ng-controller="picturesController as pc"><div>这是全放照片的那个页面</div></md-content>
