--- a/code/static/html/punchedCard.html
+++ b/code/static/html/punchedCard.html
@@ -1,1 +1,1 @@
-<md-content class="md-padding">这是放日历的那个页面</md-content>
+<md-content class="md-padding greyBackground" ng-controller="punchedCardController as pcc"><div>这是放日历的那个页面</div></md-content>
