--- a/code/static/html/relationship.html
+++ b/code/static/html/relationship.html
@@ -1,1 +1,1 @@
-<md-content class="md-padding">这是放关系轴的那个页面</md-content>
+<md-content class="md-padding greyBackground" ng-controller="relationshipController as rc"><div>这是放关系轴的那个页面</div></md-content>
