--- a/code/static/html/timeline.html
+++ b/code/static/html/timeline.html
@@ -1,1 +1,1 @@
-<md-content class="md-padding">这是放时间轴的那个页面</md-content>
+<md-content class="md-padding greyBackground" ng-controller="timelineController as tc"><div>这是放时间轴的那个页面</div></md-content>
