编译佳豪写的代码

--- a/code/static/html/punchedCard.html
+++ b/code/static/html/punchedCard.html
@@ -1,1 +1,1 @@
-<md-content class="md-padding greyBackground" ng-controller="punchedCardController as pcc"><div>这是放日历的那个页面</div></md-content>
+<link rel="stylesheet" type="text/css" href="../css/punchedCard.css"/><md-content class="md-padding greyBackground" ng-controller="punchedCardController as pcc"><div layout="column" layout-align="center stretch"><md-calendar class="fixed-calendar" ng-model="myDate" md-min-date="minDate" md-max-date="maxDate" md-date-filter="theDate"></md-calendar></div></md-content>
