--- a/code/static/html/punchedCard.html
+++ b/code/static/html/punchedCard.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="../css/punchedCard.css"/><md-content class="md-padding greyBackground" ng-controller="punchedCardController as pcc"><md-calendar ng-model="myDate" md-min-date="minDate" md-max-date="maxDate"></md-calendar></md-content>
+<link rel="stylesheet" type="text/css" href="../css/punchedCard.css"/><md-content class="md-padding punchedCardBackground" ng-controller="punchedCardController as pcc"><md-calendar ng-model="myDate" md-min-date="minDate" md-max-date="maxDate"></md-calendar></md-content>
