给每个页面加上 ng-cloak

--- a/code/static/html/others.html
+++ b/code/static/html/others.html
@@ -1,1 +1,1 @@
-<md-content class="md-padding" ng-controller="othersController as oc">其他人</md-content>
+<md-content class="md-padding" ng-cloak="ng-cloak" ng-controller="othersController as oc">其他人</md-content>
