--- a/code/static/html/timeline.html
+++ b/code/static/html/timeline.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet" href="../css/timeline.css"/><md-content class="md-padding timelineBackground" ng-controller="timelineController as tc"><div>这是放时间轴的那个页面</div></md-content>
+<link rel="stylesheet" href="../css/timeline.css"/><md-content class="md-padding timelineBackground" ng-cloak="ng-cloak" ng-controller="timelineController as tc"><div>这是放时间轴的那个页面</div></md-content>
