--- a/loader/loader.html
+++ b/loader/loader.html
@@ -2,116 +2,73 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title></title>
     <style type="text/css">
-      .container {
-        height: 100vh;
-        width: 100vw;
-        font-family: Helvetica;
+      html {
+        height: 100%;
+        background-color: #f2f2f2
       }
-      .loader {
-        height: 20px;
-        width: 250px;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
+      body {
+        min-height: 100%;
+        margin-top: 70%;
+      }
+      .spinner {
+        width: 36px;
+        height: 36px;
         margin: auto;
-      }
-      .loader--dot {
-        animation-name: loader;
-        animation-timing-function: ease-in-out;
-        animation-duration: 3s;
-        animation-iteration-count: infinite;
-        height: 20px;
-        width: 20px;
-        border-radius: 100%;
-        background-color: black;
-        position: absolute;
-        border: 2px solid white;
-      }
-      .loader--dot:first-child {
-        background-color: #4CAF50;
-        animation-delay: 0.5s;
-      }
-      .loader--dot:nth-child(2) {
-        background-color: #9C27B0;
-        animation-delay: 0.4s;
-      }
-      .loader--dot:nth-child(3) {
-        background-color: #E91E63;
-        animation-delay: 0.3s;
-      }
-      .loader--dot:nth-child(4) {
-        background-color: #FF9800;
-        animation-delay: 0.2s;
-      }
-      .loader--dot:nth-child(5) {
-        background-color: #2196F3;
-        animation-delay: 0.1s;
-      }
-      .loader--dot:nth-child(6) {
-        background-color: #FFEB3B;
-        animation-delay: 0s;
-      }
-      .loader--text {
-        position: absolute;
-        top: 200%;
-        left: 0;
-        right: 0;
-        width: 4rem;
-        margin: auto;
-      }
-      .loader--text:after {
-        content: "加载中";
-        font-weight: bold;
-        animation-name: loading-text;
-        animation-duration: 3s;
-        animation-iteration-count: infinite;
+        vertical-align: middle;
+        animation: rotate 1.4s infinite ease-in-out, background 1.4s infinite ease-in-out alternate;
+        -webkit-animation: rotate 1.4s infinite ease-in-out, background 1.4s infinite ease-in-out alternate;
       }
 
-      @keyframes loader {
-        15% {
-          transform: translateX(0);
-        }
-        45% {
-          transform: translateX(230px);
-        }
-        65% {
-          transform: translateX(230px);
-        }
-        95% {
-          transform: translateX(0);
-        }
-      }
-      @keyframes loading-text {
+      @keyframes rotate {
         0% {
-          content: "加载中";
-        }
-        25% {
-          content: "加载中.";
+          transform: perspective(120px) rotateX(0deg) rotateY(0deg);
         }
         50% {
-          content: "加载中..";
+          transform: perspective(120px) rotateX(-180deg) rotateY(0deg);
         }
-        75% {
-          content: "加载中...";
+        100% {
+          transform: perspective(120px) rotateX(-180deg) rotateY(-180deg);
+        }
+      }
+      @-webkit-keyframes rotate {
+        0% {
+          transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+        }
+        50% {
+          transform: perspective(120px) rotateX(-180deg) rotateY(0deg);
+        }
+        100% {
+          transform: perspective(120px) rotateX(-180deg) rotateY(-180deg);
+        }
+      }
+      @keyframes background {
+        0% {
+        background-color: #27ae60;
+        }
+        50% {
+          background-color: #9b59b6;
+        }
+        100% {
+          background-color: #c0392b;
+        }
+      }
+      @-webkit-keyframes background {
+        0% {
+        background-color: #27ae60;
+        }
+        50% {
+          background-color: #9b59b6;
+        }
+        100% {
+          background-color: #c0392b;
         }
       }
     </style>
   </head>
   <body>
-    <div class="container">
-      <div class="loader">
-        <div class="loader--dot"></div>
-        <div class="loader--dot"></div>
-        <div class="loader--dot"></div>
-        <div class="loader--dot"></div>
-        <div class="loader--dot"></div>
-        <div class="loader--dot"></div>
-        <div class="loader--text"></div>
-      </div>
-    </div>
+    <div class="spinner"></div>
   </body>
 </html>
